Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/NoObjectMethods.out
NoObjectMethods.java:10:9: compiler.err.intf.annotation.member.clash: clone(), java.lang.Object
1 error
